--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,18 @@ Size=400,400
 Collapsed=0
 
 [Window][Properties]
-Pos=76,75
-Size=845,819
+Pos=26,462
+Size=228,313
+Collapsed=0
+
+[Window][Debug]
+Pos=255,747
+Size=545,112
+Collapsed=0
+
+[Window][Camera]
+Pos=796,228
+Size=145,91
 Collapsed=0
 
 [Docking][Data]
