--- a/imgui.ini
+++ b/imgui.ini
@@ -3,55 +3,30 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Properties]
-Pos=26,462
-Size=228,313
-Collapsed=0
-
 [Window][Debug]
-Pos=219,676
-Size=381,82
+Pos=295,7
+Size=699,93
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Camera]
-Pos=602,676
-Size=293,82
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Naam]
-Pos=257,207
-Size=219,76
+Pos=1195,4
+Size=718,90
 Collapsed=0
 
-[Window][Telefoonnummer]
-Pos=256,353
-Size=569,72
+[Window][Draw methods]
+Pos=4,12
+Size=286,253
 Collapsed=0
 
-[Window][Website]
-Pos=257,280
-Size=216,75
+[Window][Properties]
+Pos=13,466
+Size=301,508
 Collapsed=0
 
-[Window][Functie]
-Pos=472,279
-Size=353,78
-Collapsed=0
-
-[Window][Amount Of Objects]
-Pos=32,163
-Size=281,80
-Collapsed=0
-
-[Window][Linkedin]
-Pos=473,205
-Size=353,78
+[Window][Matrix]
+Pos=1297,805
+Size=554,171
 Collapsed=0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=228,714 Size=676,82 Split=X
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=189,82 Selected=0x392A5ADD
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=145,82 Selected=0x0545BD69
 
